Add spotless plugin and fix grammar issues (#1503)
* Add spotless plugin and fix grammar issues

* Take into account Sonar comments