@@ -1,20 +1,18 @@
 /**
- * Copyright 2005-2024 Qlik
- * 
- * The contents of this file is subject to the terms of the Apache 2.0 open
- * source license available at http://www.opensource.org/licenses/apache-2.0
- * 
+ * Copyright 2005-2026 Qlik
+ *<p>
+ * The content of this file is subject to the terms of the Apache 2.0 open
+ * source license available at https://www.opensource.org/licenses/apache-2.0
+ *<p>
  * Restlet is a registered trademark of QlikTech International AB.
  */
-
 package org.restlet.ext.crypto.internal;
 
 import java.util.Base64;
 import java.util.Date;
-import java.util.Iterator;
+import java.util.Map;
 import java.util.SortedMap;
 import java.util.TreeMap;
-
 import org.restlet.Request;
 import org.restlet.data.ChallengeResponse;
 import org.restlet.data.ChallengeScheme;
@@ -33,49 +31,41 @@ import org.restlet.ext.crypto.DigestUtils;
 import org.restlet.util.Series;
 
 /**
- * Implements the Shared Key authentication for Azure services. This concerns
- * Blob and Queues on Azure Storage.<br>
+ * Implements the Shared Key authentication for Azure services. This concerns Blob and Queues on
+ * Azure Storage.<br>
  * <br>
  * More documentation is available <a
  * href="http://msdn.microsoft.com/en-us/library/dd179428.aspx">here</a>
- * 
+ *
  * @author Thierry Boileau
  */
 public class HttpAzureSharedKeyHelper extends AuthenticatorHelper {
 
     /**
      * Returns the canonicalized Azure headers.
-     * 
-     * @param requestHeaders
-     *            The list of request headers.
+     *
+     * @param requestHeaders The list of request headers.
      * @return The canonicalized Azure headers.
      */
-    private static String getCanonicalizedAzureHeaders(
-            Series<Header> requestHeaders) {
+    private static String getCanonicalizedAzureHeaders(Series<Header> requestHeaders) {
         // Filter out all the Azure headers required for SharedKey
         // authentication
-        SortedMap<String, String> azureHeaders = new TreeMap<String, String>();
+        SortedMap<String, String> azureHeaders = new TreeMap<>();
         String headerName;
 
         for (Header header : requestHeaders) {
             headerName = header.getName().toLowerCase();
 
             if (headerName.startsWith("x-ms-")) {
-                if (!azureHeaders.containsKey(headerName)) {
-                    azureHeaders.put(headerName,
-                            requestHeaders.getValues(headerName));
-                }
+                azureHeaders.computeIfAbsent(headerName, requestHeaders::getValues);
             }
         }
 
         // Concatenate all Azure headers
         StringBuilder sb = new StringBuilder();
 
-        for (Iterator<String> iterator = azureHeaders.keySet().iterator(); iterator
-                .hasNext();) {
-            String key = iterator.next();
-            sb.append(key).append(':').append(azureHeaders.get(key))
-                    .append("\n");
+        for (Map.Entry<String, String> entry : azureHeaders.entrySet()) {
+            sb.append(entry.getKey()).append(':').append(entry.getValue()).append("\n");
         }
 
         return sb.toString();
@@ -83,9 +73,8 @@ public class HttpAzureSharedKeyHelper extends AuthenticatorHelper {
 
     /**
      * Returns the canonicalized resource name.
-     * 
-     * @param resourceRef
-     *            The resource reference.
+     *
+     * @param resourceRef The resource reference.
      * @return The canonicalized resource name.
      */
     private static String getCanonicalizedResourceName(Reference resourceRef) {
@@ -93,29 +82,79 @@ public class HttpAzureSharedKeyHelper extends AuthenticatorHelper {
         Parameter param = form.getFirst("comp", true);
 
         if (param != null) {
-            StringBuilder sb = new StringBuilder(resourceRef.getPath());
-            return sb.append("?").append("comp=").append(param.getValue())
-                    .toString();
+            return resourceRef.getPath() + "?" + "comp=" + param.getValue();
         }
 
         return resourceRef.getPath();
     }
 
-    /**
-     * Constructor.
-     */
+    /** Constructor. */
     public HttpAzureSharedKeyHelper() {
         super(ChallengeScheme.HTTP_AZURE_SHAREDKEY, true, false);
     }
 
     @Override
-    public void formatResponse(ChallengeWriter cw, ChallengeResponse challenge,
-            Request request, Series<Header> httpHeaders) {
+    public void formatResponse(
+            ChallengeWriter cw,
+            ChallengeResponse challenge,
+            Request request,
+            Series<Header> httpHeaders) {
 
-        // Setup the method name
-        final String methodName = request.getMethod().getName();
+        // Set up the message part
+        final String rest =
+                request.getMethod().getName()
+                        + '\n'
+                        + getContentMd5(httpHeaders)
+                        + '\n'
+                        + getContentTypeHeader(request, httpHeaders)
+                        + '\n'
+                        + getDateHeader(httpHeaders)
+                        + '\n'
+                        + getCanonicalizedAzureHeaders(httpHeaders)
+                        + '/'
+                        + challenge.getIdentifier()
+                        + getCanonicalizedResourceName(request.getResourceRef());
 
-        // Setup the Date header
+        // Append the SharedKey credentials
+        cw.append(challenge.getIdentifier())
+                .append(':')
+                .append(
+                        Base64.getEncoder()
+                                .encodeToString(
+                                        DigestUtils.toHMacSha256(
+                                                rest,
+                                                Base64.getDecoder()
+                                                        .decode(
+                                                                IoUtils.toByteArray(
+                                                                        challenge.getSecret())))));
+    }
+
+    private static String getContentMd5(final Series<Header> httpHeaders) {
+        String contentMd5 = httpHeaders.getFirstValue(HeaderConstants.HEADER_CONTENT_MD5, true);
+        if (contentMd5 == null) {
+            contentMd5 = "";
+        }
+        return contentMd5;
+    }
+
+    private static String getContentTypeHeader(
+            final Request request, final Series<Header> httpHeaders) {
+        String contentType = httpHeaders.getFirstValue(HeaderConstants.HEADER_CONTENT_TYPE, true);
+
+        if (contentType != null) {
+            return contentType;
+        }
+
+        if (!request.getMethod().equals(Method.PUT) && SystemUtils.shouldApplyBug6331920Patch()) {
+            contentType = "application/x-www-form-urlencoded";
+        } else {
+            contentType = "";
+        }
+
+        return contentType;
+    }
+
+    private static String getDateHeader(final Series<Header> httpHeaders) {
         String date = "";
 
         if (httpHeaders.getFirstValue("x-ms-date", true) == null) {
@@ -123,70 +162,10 @@ public class HttpAzureSharedKeyHelper extends AuthenticatorHelper {
             date = httpHeaders.getFirstValue(HeaderConstants.HEADER_DATE, true);
             if (date == null) {
                 // Add a fresh Date header
-                date = DateUtils.format(new Date(),
-                        DateUtils.FORMAT_RFC_1123.get(0));
+                date = DateUtils.format(new Date(), DateUtils.FORMAT_RFC_1123.getFirst());
                 httpHeaders.add(HeaderConstants.HEADER_DATE, date);
             }
         }
-        // Setup the ContentType header
-        String contentMd5 = httpHeaders.getFirstValue(
-                HeaderConstants.HEADER_CONTENT_MD5, true);
-        if (contentMd5 == null) {
-            contentMd5 = "";
-        }
-
-        // Setup the ContentType header
-        String contentType = httpHeaders.getFirstValue(
-                HeaderConstants.HEADER_CONTENT_TYPE, true);
-        if (contentType == null) {
-            boolean applyPatch = false;
-
-            // This patch seems to apply to Sun JVM only.
-            final String jvmVendor = System.getProperty("java.vm.vendor");
-            if ((jvmVendor != null)
-                    && (jvmVendor.toLowerCase()).startsWith("sun")) {
-                final int majorVersionNumber = SystemUtils
-                        .getJavaMajorVersion();
-                final int minorVersionNumber = SystemUtils
-                        .getJavaMinorVersion();
-
-                if (majorVersionNumber == 1) {
-                    if (minorVersionNumber < 5) {
-                        applyPatch = true;
-                    } else if (minorVersionNumber == 5) {
-                        // Sun fixed the bug in update 10
-                        applyPatch = (SystemUtils.getJavaUpdateVersion() < 10);
-                    }
-                }
-            }
-
-            if (applyPatch && !request.getMethod().equals(Method.PUT)) {
-                contentType = "application/x-www-form-urlencoded";
-            } else {
-                contentType = "";
-            }
-        }
-
-        // Setup the canonicalized AzureHeaders
-        final String canonicalizedAzureHeaders = getCanonicalizedAzureHeaders(httpHeaders);
-
-        // Setup the canonicalized path
-        final String canonicalizedResource = getCanonicalizedResourceName(request
-                .getResourceRef());
-
-        // Setup the message part
-        final StringBuilder rest = new StringBuilder();
-        rest.append(methodName).append('\n').append(contentMd5).append('\n')
-                .append(contentType).append('\n').append(date).append('\n')
-                .append(canonicalizedAzureHeaders).append('/')
-                .append(challenge.getIdentifier())
-                .append(canonicalizedResource);
-
-        // Append the SharedKey credentials
-        cw.append(challenge.getIdentifier())
-                .append(':')
-                .append(Base64.getEncoder().encodeToString(
-                        DigestUtils.toHMacSha256(rest.toString(),
-                                Base64.getDecoder().decode(IoUtils.toByteArray(challenge.getSecret())))));
+        return date;
     }
 }
