@@ -1,18 +1,20 @@
 /**
- * Copyright 2005-2024 Qlik
- * 
- * The contents of this file is subject to the terms of the Apache 2.0 open
- * source license available at http://www.opensource.org/licenses/apache-2.0
- * 
+ * Copyright 2005-2026 Qlik
+ *<p>
+ * The content of this file is subject to the terms of the Apache 2.0 open
+ * source license available at https://www.opensource.org/licenses/apache-2.0
+ *<p>
  * Restlet is a registered trademark of QlikTech International AB.
  */
-
 package org.restlet.engine;
+
+import static java.net.URL.setURLStreamHandlerFactory;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -22,60 +24,56 @@ import java.util.logging.Formatter;
 import java.util.logging.Level;
 import java.util.logging.LogManager;
 import java.util.logging.Logger;
-
 import org.restlet.Client;
 import org.restlet.Context;
 import org.restlet.Request;
 import org.restlet.Response;
+import org.restlet.Server;
 import org.restlet.data.ChallengeScheme;
 import org.restlet.data.Method;
 import org.restlet.data.Protocol;
+import org.restlet.engine.connector.ConnectorHelper;
 import org.restlet.engine.io.IoUtils;
 import org.restlet.engine.log.LoggerFacade;
 
 /**
- * Engine supporting the Restlet API. The engine acts as a registry of various
- * {@link Helper} types: {@link org.restlet.engine.security.AuthenticatorHelper}
- * , {@link org.restlet.engine.connector.ClientHelper},
- * {@link org.restlet.engine.converter.ConverterHelper} and
- * {@link org.restlet.engine.connector.ServerHelper} classes.<br>
+ * Engine supporting the Restlet API. The engine acts as a registry of various {@link Helper} types:
+ * {@link org.restlet.engine.security.AuthenticatorHelper} , {@link
+ * org.restlet.engine.connector.ClientHelper}, {@link org.restlet.engine.converter.ConverterHelper}
+ * and {@link org.restlet.engine.connector.ServerHelper} classes.<br>
  * <br>
- * Note that by default the JULI logging mechanism is used but it is possible to
- * replace it by providing an alternate {@link LoggerFacade} implementation. For
- * this, just pass a system property named
- * "org.restlet.engine.loggerFacadeClass" with the qualified class name as a
- * value.
- * 
+ * Note that by default the JULI logging mechanism is used but it is possible to replace it by
+ * providing an alternate {@link LoggerFacade} implementation. For this, just pass a system property
+ * named "org.restlet.engine.loggerFacadeClass" with the qualified class name as a value.
+ *
  * @author Jerome Louvel
  */
 public class Engine {
 
     public static final String DESCRIPTOR = "META-INF/services";
 
-    public static final String DESCRIPTOR_AUTHENTICATOR = "org.restlet.engine.security.AuthenticatorHelper";
+    public static final String DESCRIPTOR_AUTHENTICATOR =
+            "org.restlet.engine.security.AuthenticatorHelper";
 
-    public static final String DESCRIPTOR_AUTHENTICATOR_PATH = DESCRIPTOR + "/"
-            + DESCRIPTOR_AUTHENTICATOR;
+    public static final String DESCRIPTOR_AUTHENTICATOR_PATH =
+            DESCRIPTOR + "/" + DESCRIPTOR_AUTHENTICATOR;
 
     public static final String DESCRIPTOR_CLIENT = "org.restlet.engine.ClientHelper";
 
-    public static final String DESCRIPTOR_CLIENT_PATH = DESCRIPTOR + "/"
-            + DESCRIPTOR_CLIENT;
+    public static final String DESCRIPTOR_CLIENT_PATH = DESCRIPTOR + "/" + DESCRIPTOR_CLIENT;
 
-    public static final String DESCRIPTOR_CONVERTER = "org.restlet.engine.converter.ConverterHelper";
+    public static final String DESCRIPTOR_CONVERTER =
+            "org.restlet.engine.converter.ConverterHelper";
 
-    public static final String DESCRIPTOR_CONVERTER_PATH = DESCRIPTOR + "/"
-            + DESCRIPTOR_CONVERTER;
+    public static final String DESCRIPTOR_CONVERTER_PATH = DESCRIPTOR + "/" + DESCRIPTOR_CONVERTER;
 
     public static final String DESCRIPTOR_PROTOCOL = "org.restlet.engine.ProtocolHelper";
 
-    public static final String DESCRIPTOR_PROTOCOL_PATH = DESCRIPTOR + "/"
-            + DESCRIPTOR_PROTOCOL;
+    public static final String DESCRIPTOR_PROTOCOL_PATH = DESCRIPTOR + "/" + DESCRIPTOR_PROTOCOL;
 
     public static final String DESCRIPTOR_SERVER = "org.restlet.engine.ServerHelper";
 
-    public static final String DESCRIPTOR_SERVER_PATH = DESCRIPTOR + "/"
-            + DESCRIPTOR_SERVER;
+    public static final String DESCRIPTOR_SERVER_PATH = DESCRIPTOR + "/" + DESCRIPTOR_SERVER;
 
     /** The registered engine. */
     private static volatile Engine instance = null;
@@ -84,7 +82,8 @@ public class Engine {
     private static volatile boolean logConfigured = false;
 
     /** The general log formatter. */
-    private static volatile Class<? extends Formatter> logFormatter = org.restlet.engine.log.SimplestFormatter.class;
+    private static volatile Class<? extends Formatter> logFormatter =
+            org.restlet.engine.log.SimplestFormatter.class;
 
     /** The general log level. */
     private static volatile Level logLevel = Level.INFO;
@@ -102,64 +101,50 @@ public class Engine {
     private static volatile Level restletLogLevel;
 
     /** Complete version. */
-    public static final String VERSION = MAJOR_NUMBER + '.' + MINOR_NUMBER
-            + RELEASE_NUMBER;
+    public static final String VERSION = MAJOR_NUMBER + '.' + MINOR_NUMBER + RELEASE_NUMBER;
 
     /** Complete version header. */
     public static final String VERSION_HEADER = "Restlet-Framework/" + VERSION;
 
-    /**
-     * Clears the current Restlet Engine altogether.
-     */
+    /** Clears the current Restlet Engine altogether. */
     public static synchronized void clear() {
         instance = null;
     }
 
     /**
-     * Creates a new standalone thread with local Restlet thread variable
-     * properly set.
-     * 
+     * Creates a new standalone thread with the local Restlet thread variable properly set.
+     *
      * @param runnable The runnable task to execute.
-     * @param name     The thread name.
-     * @return The thread with proper variables ready to run the given runnable
-     *         task.
+     * @param name The thread name.
+     * @return The thread with proper variables ready to run the given runnable task.
      */
-    public static Thread createThreadWithLocalVariables(final Runnable runnable,
-            String name) {
+    public static Thread createThreadWithLocalVariables(final Runnable runnable, String name) {
         // Save the thread local variables
-        final org.restlet.Application currentApplication = org.restlet.Application
-                .getCurrent();
+        final org.restlet.Application currentApplication = org.restlet.Application.getCurrent();
         final Context currentContext = Context.getCurrent();
-        final Integer currentVirtualHost = org.restlet.routing.VirtualHost
-                .getCurrent();
+        final Integer currentVirtualHost = org.restlet.routing.VirtualHost.getCurrent();
         final Response currentResponse = Response.getCurrent();
 
-        Runnable r = new Runnable() {
+        Runnable r =
+                () -> {
+                    // Copy the thread local variables
+                    Response.setCurrent(currentResponse);
+                    Context.setCurrent(currentContext);
+                    org.restlet.routing.VirtualHost.setCurrent(currentVirtualHost);
+                    org.restlet.Application.setCurrent(currentApplication);
 
-            @Override
-            public void run() {
-                // Copy the thread local variables
-                Response.setCurrent(currentResponse);
-                Context.setCurrent(currentContext);
-                org.restlet.routing.VirtualHost.setCurrent(currentVirtualHost);
-                org.restlet.Application.setCurrent(currentApplication);
-
-                try {
-                    // Run the user task
-                    runnable.run();
-                } finally {
-                    Engine.clearThreadLocalVariables();
-                }
-            }
-
-        };
+                    try {
+                        // Run the user task
+                        runnable.run();
+                    } finally {
+                        Engine.clearThreadLocalVariables();
+                    }
+                };
 
         return new Thread(r, name);
     }
 
-    /**
-     * Clears the thread local variables set by the Restlet API and engine.
-     */
+    /** Clears the thread local variables set by the Restlet API and engine. */
     public static void clearThreadLocalVariables() {
         Response.setCurrent(null);
         Context.setCurrent(null);
@@ -167,46 +152,44 @@ public class Engine {
         org.restlet.Application.setCurrent(null);
     }
 
-    /**
-     * Updates the global log configuration of the JVM programmatically.
-     */
+    /** Updates the global log configuration of the JVM programmatically. */
     public static void configureLog() {
         if ((System.getProperty("java.util.logging.config.file") == null)
-                && (System.getProperty(
-                        "java.util.logging.config.class") == null)) {
+                && (System.getProperty("java.util.logging.config.class") == null)) {
             StringBuilder sb = new StringBuilder();
-            sb.append("handlers=").append(
-                    java.util.logging.ConsoleHandler.class.getCanonicalName())
+            sb.append("handlers=")
+                    .append(java.util.logging.ConsoleHandler.class.getCanonicalName())
                     .append('\n');
 
             if (getLogLevel() != null) {
-                sb.append(".level=").append(getLogLevel().getName())
-                        .append('\n');
+                sb.append(".level=").append(getLogLevel().getName()).append('\n');
             }
 
             if (getRestletLogLevel() != null) {
-                sb.append("org.restlet.level=")
-                        .append(getRestletLogLevel().getName()).append('\n');
+                sb.append("org.restlet.level=").append(getRestletLogLevel().getName()).append('\n');
             }
 
             if (getLogFormatter() != null) {
-                String handler = java.util.logging.ConsoleHandler.class
-                        .getCanonicalName();
-                sb.append(handler).append(".formatter=")
+                String handler = java.util.logging.ConsoleHandler.class.getCanonicalName();
+                sb.append(handler)
+                        .append(".formatter=")
                         .append(getLogFormatter().getCanonicalName())
                         .append("\n");
 
                 if (getLogLevel() != null) {
-                    sb.append(handler).append(".level=")
-                            .append(getLogLevel().getName()).append("\n");
+                    sb.append(handler)
+                            .append(".level=")
+                            .append(getLogLevel().getName())
+                            .append("\n");
                 }
             }
 
             try {
-                LogManager.getLogManager().readConfiguration(
-                        new ByteArrayInputStream(sb.toString().getBytes()));
-            } catch (Throwable t) {
-                t.printStackTrace();
+                LogManager.getLogManager()
+                        .readConfiguration(new ByteArrayInputStream(sb.toString().getBytes()));
+            } catch (Exception exception) {
+                Logger.getAnonymousLogger()
+                        .log(Level.WARNING, "Could not read logger configuration", exception);
             }
         }
 
@@ -214,9 +197,8 @@ public class Engine {
     }
 
     /**
-     * Returns an anonymous logger. By default, it calls
-     * {@link #getLogger(String)} with a "" name.
-     * 
+     * Returns an anonymous logger. By default, it calls {@link #getLogger(String)} with a "" name.
+     *
      * @return The logger.
      */
     public static Logger getAnonymousLogger() {
@@ -225,7 +207,7 @@ public class Engine {
 
     /**
      * Returns the registered Restlet engine.
-     * 
+     *
      * @return The registered Restlet engine.
      */
     public static synchronized Engine getInstance() {
@@ -240,7 +222,7 @@ public class Engine {
 
     /**
      * Returns the general log formatter.
-     * 
+     *
      * @return The general log formatter.
      */
     public static Class<? extends Formatter> getLogFormatter() {
@@ -249,7 +231,7 @@ public class Engine {
 
     /**
      * Returns a logger based on the class name of the given object.
-     * 
+     *
      * @param clazz The parent class.
      * @return The logger.
      */
@@ -259,33 +241,31 @@ public class Engine {
 
     /**
      * Returns a logger based on the class name of the given object.
-     * 
-     * @param clazz             The parent class.
-     * @param defaultLoggerName The default logger name to use if no one can be
-     *                          inferred from the class.
+     *
+     * @param clazz The parent class.
+     * @param defaultLoggerName The default logger name to use if no one can be inferred from the
+     *     class.
      * @return The logger.
      */
     public static Logger getLogger(Class<?> clazz, String defaultLoggerName) {
-        return getInstance().getLoggerFacade().getLogger(clazz,
-                defaultLoggerName);
+        return getInstance().getLoggerFacade().getLogger(clazz, defaultLoggerName);
     }
 
     /**
      * Returns a logger based on the class name of the given object.
-     * 
-     * @param object            The parent object.
-     * @param defaultLoggerName The default logger name to use if no one can be
-     *                          inferred from the object class.
+     *
+     * @param object The parent object.
+     * @param defaultLoggerName The default logger name to use if no one can be inferred from the
+     *     object class.
      * @return The logger.
      */
     public static Logger getLogger(Object object, String defaultLoggerName) {
-        return getInstance().getLoggerFacade().getLogger(object,
-                defaultLoggerName);
+        return getInstance().getLoggerFacade().getLogger(object, defaultLoggerName);
     }
 
     /**
      * Returns a logger based on the given logger name.
-     * 
+     *
      * @param loggerName The logger name.
      * @return The logger.
      */
@@ -295,7 +275,7 @@ public class Engine {
 
     /**
      * Returns the general log level.
-     * 
+     *
      * @return The general log level.
      */
     public static Level getLogLevel() {
@@ -304,7 +284,7 @@ public class Engine {
 
     /**
      * Returns the classloader resource for a given name/path.
-     * 
+     *
      * @param name The name/path to lookup.
      * @return The resource URL.
      */
@@ -313,9 +293,8 @@ public class Engine {
     }
 
     /**
-     * Returns the Restlet log level. For loggers with a name starting with
-     * "org.restlet".
-     * 
+     * Returns the Restlet log level. For loggers with a name starting with "org.restlet".
+     *
      * @return The Restlet log level.
      */
     public static Level getRestletLogLevel() {
@@ -324,19 +303,18 @@ public class Engine {
 
     /**
      * Returns the class object for the given name using the engine classloader.
-     * 
+     *
      * @param className The class name to lookup.
      * @return The class object or null if the class was not found.
      * @see #getClassLoader()
      */
-    public static Class<?> loadClass(String className)
-            throws ClassNotFoundException {
+    public static Class<?> loadClass(String className) throws ClassNotFoundException {
         return getInstance().getClassLoader().loadClass(className);
     }
 
     /**
      * Registers a new Restlet Engine.
-     * 
+     *
      * @return The registered engine.
      */
     public static synchronized Engine register() {
@@ -345,9 +323,8 @@ public class Engine {
 
     /**
      * Registers a new Restlet Engine.
-     * 
-     * @param discoverPlugins True if plug-ins should be automatically
-     *                        discovered.
+     *
+     * @param discoverPlugins True if plug-ins should be automatically discovered.
      * @return The registered engine.
      */
     public static synchronized Engine register(boolean discoverPlugins) {
@@ -362,18 +339,17 @@ public class Engine {
 
     /**
      * Sets the general log formatter.
-     * 
+     *
      * @param logFormatter The general log formatter.
      */
-    public static void setLogFormatter(
-            Class<? extends Formatter> logFormatter) {
+    public static void setLogFormatter(Class<? extends Formatter> logFormatter) {
         Engine.logFormatter = logFormatter;
         configureLog();
     }
 
     /**
      * Sets the general log level. Modifies the global JVM's {@link LogManager}.
-     * 
+     *
      * @param logLevel The general log level.
      */
     public static void setLogLevel(Level logLevel) {
@@ -382,9 +358,8 @@ public class Engine {
     }
 
     /**
-     * Sets the Restlet log level. For loggers with a name starting with
-     * "org.restlet".
-     * 
+     * Sets the Restlet log level. For loggers with a name starting with "org.restlet".
+     *
      * @param restletLogLevel The Restlet log level.
      */
     public static void setRestletLogLevel(Level restletLogLevel) {
@@ -411,23 +386,20 @@ public class Engine {
     private final List<org.restlet.engine.connector.ProtocolHelper> registeredProtocols;
 
     /** List of available server connectors. */
-    private final List<org.restlet.engine.connector.ConnectorHelper<org.restlet.Server>> registeredServers;
+    private final List<ConnectorHelper<Server>> registeredServers;
 
     /** User class loader to use for dynamic class loading. */
     private volatile ClassLoader userClassLoader;
 
-    /**
-     * Constructor that will automatically attempt to discover connectors.
-     */
+    /** Constructor that will automatically attempt to discover connectors. */
     public Engine() {
         this(true);
     }
 
     /**
      * Constructor.
-     * 
-     * @param discoverHelpers True if helpers should be automatically
-     *                        discovered.
+     *
+     * @param discoverHelpers True if helpers should be automatically discovered.
      */
     public Engine(boolean discoverHelpers) {
         // Prevent engine initialization code from recreating other engines
@@ -437,17 +409,22 @@ public class Engine {
         this.classLoader = createClassLoader();
         this.userClassLoader = null;
 
-        String loggerFacadeClass = System.getProperty(
-                "org.restlet.engine.loggerFacadeClass",
-                "org.restlet.engine.log.LoggerFacade");
+        String loggerFacadeClass =
+                System.getProperty(
+                        "org.restlet.engine.loggerFacadeClass",
+                        "org.restlet.engine.log.LoggerFacade");
         try {
-            this.loggerFacade = (LoggerFacade) getClassLoader()
-                    .loadClass(loggerFacadeClass).getDeclaredConstructor()
-                    .newInstance();
+            this.loggerFacade =
+                    (LoggerFacade)
+                            getClassLoader()
+                                    .loadClass(loggerFacadeClass)
+                                    .getDeclaredConstructor()
+                                    .newInstance();
         } catch (Exception e) {
             this.loggerFacade = new LoggerFacade();
-            this.loggerFacade.getLogger("org.restlet").log(Level.WARNING,
-                    "Unable to register the logger facade", e);
+            this.loggerFacade
+                    .getLogger("org.restlet")
+                    .log(Level.WARNING, "Unable to register the logger facade", e);
         }
 
         this.registeredClients = new CopyOnWriteArrayList<>();
@@ -465,17 +442,19 @@ public class Engine {
                 discoverAuthenticators();
                 discoverConverters();
             } catch (IOException e) {
-                Context.getCurrentLogger().log(Level.WARNING,
-                        "An error occurred while discovering the engine helpers.",
-                        e);
+                Context.getCurrentLogger()
+                        .log(
+                                Level.WARNING,
+                                "An error occurred while discovering the engine helpers.",
+                                e);
             }
         }
     }
 
     /**
-     * Creates a new class loader. By default, it returns an instance of
-     * {@link org.restlet.engine.util.EngineClassLoader}.
-     * 
+     * Creates a new class loader. By default, it returns an instance of {@link
+     * org.restlet.engine.util.EngineClassLoader}.
+     *
      * @return A new class loader.
      */
     protected ClassLoader createClassLoader() {
@@ -484,8 +463,8 @@ public class Engine {
 
     /**
      * Creates a new helper for a given client connector.
-     * 
-     * @param client      The client to help.
+     *
+     * @param client The client to help.
      * @param helperClass Optional helper class name.
      * @return The new helper.
      */
@@ -494,49 +473,47 @@ public class Engine {
             Client client, String helperClass) {
         org.restlet.engine.connector.ConnectorHelper<Client> result = null;
 
-        if (!client.getProtocols().isEmpty()) {
-            org.restlet.engine.connector.ConnectorHelper<Client> connector = null;
-            for (final Iterator<org.restlet.engine.connector.ConnectorHelper<Client>> iter = getRegisteredClients()
-                    .iterator(); (result == null) && iter.hasNext();) {
-                connector = iter.next();
+        if (client.getProtocols().isEmpty()) {
+            return result;
+        }
 
-                if (new HashSet<>(connector.getProtocols())
-                        .containsAll(client.getProtocols())) {
-                    if ((helperClass == null) || connector.getClass()
-                            .getCanonicalName().equals(helperClass)) {
-                        try {
-                            result = connector.getClass()
-                                    .getConstructor(Client.class)
-                                    .newInstance(client);
-                        } catch (Exception e) {
-                            Context.getCurrentLogger().log(Level.SEVERE,
+        org.restlet.engine.connector.ConnectorHelper<Client> connector = null;
+        for (final Iterator<org.restlet.engine.connector.ConnectorHelper<Client>> iter =
+                        getRegisteredClients().iterator();
+                (result == null) && iter.hasNext(); ) {
+            connector = iter.next();
+
+            if (new HashSet<>(connector.getProtocols()).containsAll(client.getProtocols())
+                    && ((helperClass == null)
+                            || connector.getClass().getCanonicalName().equals(helperClass))) {
+                try {
+                    result = connector.getClass().getConstructor(Client.class).newInstance(client);
+                } catch (Exception e) {
+                    Context.getCurrentLogger()
+                            .log(
+                                    Level.SEVERE,
                                     "Exception during the instantiation of the client connector.",
                                     e);
-                        }
-                    }
                 }
             }
+        }
 
-            if (result == null) {
-                // Couldn't find a matching connector
-                StringBuilder sb = new StringBuilder();
-                sb.append(
-                        "No available client connector supports the required protocols: ");
+        if (result == null) {
+            // Couldn't find a matching connector
+            StringBuilder sb = new StringBuilder();
+            sb.append("No available client connector supports the required protocols: ");
 
-                for (Protocol p : client.getProtocols()) {
-                    sb.append("'").append(p.getName()).append("' ");
-                }
-
-                sb.append(
-                        ". Please add the JAR of a matching connector to your classpath.");
-
-                if (Edition.ANDROID.isCurrentEdition()) {
-                    sb.append(
-                            " Then, register this connector helper manually.");
-                }
-
-                Context.getCurrentLogger().log(Level.WARNING, sb.toString());
+            for (Protocol p : client.getProtocols()) {
+                sb.append("'").append(p.getName()).append("' ");
             }
+
+            sb.append(". Please add the JAR of a matching connector to your classpath.");
+
+            if (Edition.ANDROID.isCurrentEdition()) {
+                sb.append(" Then, register this connector helper manually.");
+            }
+
+            Context.getCurrentLogger().log(Level.WARNING, sb::toString);
         }
 
         return result;
@@ -544,59 +521,55 @@ public class Engine {
 
     /**
      * Creates a new helper for a given server connector.
-     * 
-     * @param server      The server to help.
+     *
+     * @param server The server to help.
      * @param helperClass Optional helper class name.
      * @return The new helper.
      */
     @SuppressWarnings("unchecked")
-    public org.restlet.engine.connector.ConnectorHelper<org.restlet.Server> createHelper(
-            org.restlet.Server server, String helperClass) {
-        org.restlet.engine.connector.ConnectorHelper<org.restlet.Server> result = null;
+    public ConnectorHelper<Server> createHelper(Server server, String helperClass) {
+        ConnectorHelper<Server> result = null;
 
-        if (!server.getProtocols().isEmpty()) {
-            org.restlet.engine.connector.ConnectorHelper<org.restlet.Server> connector = null;
-            for (final Iterator<org.restlet.engine.connector.ConnectorHelper<org.restlet.Server>> iter = getRegisteredServers()
-                    .iterator(); (result == null) && iter.hasNext();) {
-                connector = iter.next();
+        if (server.getProtocols().isEmpty()) {
+            return result;
+        }
 
-                if ((helperClass == null) || connector.getClass()
-                        .getCanonicalName().equals(helperClass)) {
-                    if (new HashSet<>(connector.getProtocols())
-                            .containsAll(server.getProtocols())) {
-                        try {
-                            result = connector.getClass()
-                                    .getConstructor(org.restlet.Server.class)
-                                    .newInstance(server);
-                        } catch (Exception e) {
-                            Context.getCurrentLogger().log(Level.SEVERE,
+        ConnectorHelper<Server> connector = null;
+        for (final Iterator<ConnectorHelper<Server>> iter = getRegisteredServers().iterator();
+                (result == null) && iter.hasNext(); ) {
+            connector = iter.next();
+
+            if (((helperClass == null)
+                            || connector.getClass().getCanonicalName().equals(helperClass))
+                    && new HashSet<>(connector.getProtocols()).containsAll(server.getProtocols())) {
+                try {
+                    result = connector.getClass().getConstructor(Server.class).newInstance(server);
+                } catch (Exception e) {
+                    Context.getCurrentLogger()
+                            .log(
+                                    Level.SEVERE,
                                     "Exception while instantiation the server connector.",
                                     e);
-                        }
-                    }
                 }
             }
+        }
 
-            if (result == null) {
-                // Couldn't find a matching connector
-                final StringBuilder sb = new StringBuilder();
-                sb.append(
-                        "No available server connector supports the required protocols: ");
+        if (result == null) {
+            // Couldn't find a matching connector
+            final StringBuilder sb = new StringBuilder();
+            sb.append("No available server connector supports the required protocols: ");
 
-                for (final Protocol p : server.getProtocols()) {
-                    sb.append("'").append(p.getName()).append("' ");
-                }
-
-                sb.append(
-                        ". Please add the JAR of a matching connector to your classpath.");
-
-                if (Edition.ANDROID.isCurrentEdition()) {
-                    sb.append(
-                            " Then, register this connector helper manually.");
-                }
-
-                Context.getCurrentLogger().log(Level.WARNING, sb.toString());
+            for (final Protocol p : server.getProtocols()) {
+                sb.append("'").append(p.getName()).append("' ");
             }
+
+            sb.append(". Please add the JAR of a matching connector to your classpath.");
+
+            if (Edition.ANDROID.isCurrentEdition()) {
+                sb.append(" Then, register this connector helper manually.");
+            }
+
+            Context.getCurrentLogger().log(Level.WARNING, sb::toString);
         }
 
         return result;
@@ -604,54 +577,48 @@ public class Engine {
 
     /**
      * Discovers the authenticator helpers and register the default helpers.
-     * 
+     *
      * @throws IOException
      */
     private void discoverAuthenticators() throws IOException {
-        registerHelpers(DESCRIPTOR_AUTHENTICATOR_PATH,
-                getRegisteredAuthenticators(), null);
+        registerHelpers(DESCRIPTOR_AUTHENTICATOR_PATH, getRegisteredAuthenticators(), null);
         registerDefaultAuthentications();
     }
 
     /**
-     * Discovers the server and client connectors and register the default
-     * connectors.
-     * 
+     * Discovers the server and client connectors and register the default connectors.
+     *
      * @throws IOException
      */
     private void discoverConnectors() throws IOException {
-        registerHelpers(DESCRIPTOR_CLIENT_PATH, getRegisteredClients(),
-                Client.class);
-        registerHelpers(DESCRIPTOR_SERVER_PATH, getRegisteredServers(),
-                org.restlet.Server.class);
+        registerHelpers(DESCRIPTOR_CLIENT_PATH, getRegisteredClients(), Client.class);
+        registerHelpers(DESCRIPTOR_SERVER_PATH, getRegisteredServers(), Server.class);
         registerDefaultConnectors();
     }
 
     /**
      * Discovers the converter helpers and register the default helpers.
-     * 
+     *
      * @throws IOException
      */
     private void discoverConverters() throws IOException {
-        registerHelpers(DESCRIPTOR_CONVERTER_PATH, getRegisteredConverters(),
-                null);
+        registerHelpers(DESCRIPTOR_CONVERTER_PATH, getRegisteredConverters(), null);
         registerDefaultConverters();
     }
 
     /**
      * Discovers the protocol helpers and register the default helpers.
-     * 
+     *
      * @throws IOException
      */
     private void discoverProtocols() throws IOException {
-        registerHelpers(DESCRIPTOR_PROTOCOL_PATH, getRegisteredProtocols(),
-                null);
+        registerHelpers(DESCRIPTOR_PROTOCOL_PATH, getRegisteredProtocols(), null);
         registerDefaultProtocols();
     }
 
     /**
      * Finds the converter helper supporting the given conversion.
-     * 
+     *
      * @return The converter helper or null.
      */
     public org.restlet.engine.converter.ConverterHelper findHelper() {
@@ -661,17 +628,17 @@ public class Engine {
 
     /**
      * Finds the authenticator helper supporting the given scheme.
-     * 
+     *
      * @param challengeScheme The challenge scheme to match.
-     * @param clientSide      Indicates if client side support is required.
-     * @param serverSide      Indicates if server side support is required.
+     * @param clientSide Indicates if client side support is required.
+     * @param serverSide Indicates if server side support is required.
      * @return The authenticator helper or null.
      */
     public org.restlet.engine.security.AuthenticatorHelper findHelper(
-            ChallengeScheme challengeScheme, boolean clientSide,
-            boolean serverSide) {
+            ChallengeScheme challengeScheme, boolean clientSide, boolean serverSide) {
         org.restlet.engine.security.AuthenticatorHelper result = null;
-        List<org.restlet.engine.security.AuthenticatorHelper> helpers = getRegisteredAuthenticators();
+        List<org.restlet.engine.security.AuthenticatorHelper> helpers =
+                getRegisteredAuthenticators();
         org.restlet.engine.security.AuthenticatorHelper current;
 
         for (int i = 0; (result == null) && (i < helpers.size()); i++) {
@@ -688,12 +655,11 @@ public class Engine {
     }
 
     /**
-     * Returns the class loader. It uses the delegation model with the Engine
-     * class's class loader as a parent. If this parent doesn't find a class or
-     * resource, it then tries the user class loader (via
-     * {@link #getUserClassLoader()} and finally the
-     * {@link Thread#getContextClassLoader()}.
-     * 
+     * Returns the class loader. It uses the delegation model with the Engine class's class loader
+     * as a parent. If this parent doesn't find a class or resource, it then tries the user class
+     * loader (via {@link #getUserClassLoader()} and finally the {@link
+     * Thread#getContextClassLoader()}.
+     *
      * @return The engine class loader.
      * @see org.restlet.engine.util.EngineClassLoader
      */
@@ -703,7 +669,7 @@ public class Engine {
 
     /**
      * Returns the logger facade to use.
-     * 
+     *
      * @return The logger facade to use.
      */
     public LoggerFacade getLoggerFacade() {
@@ -712,7 +678,7 @@ public class Engine {
 
     /**
      * Parses a line to extract the provider class name.
-     * 
+     *
      * @param line The line to parse.
      * @return The provider's class name or an empty string.
      */
@@ -726,7 +692,7 @@ public class Engine {
 
     /**
      * Returns the list of available authentication helpers.
-     * 
+     *
      * @return The list of available authentication helpers.
      */
     public List<org.restlet.engine.security.AuthenticatorHelper> getRegisteredAuthenticators() {
@@ -735,7 +701,7 @@ public class Engine {
 
     /**
      * Returns the list of available client connectors.
-     * 
+     *
      * @return The list of available client connectors.
      */
     public List<org.restlet.engine.connector.ConnectorHelper<Client>> getRegisteredClients() {
@@ -744,7 +710,7 @@ public class Engine {
 
     /**
      * Returns the list of available converters.
-     * 
+     *
      * @return The list of available converters.
      */
     public List<org.restlet.engine.converter.ConverterHelper> getRegisteredConverters() {
@@ -753,7 +719,7 @@ public class Engine {
 
     /**
      * Returns the list of available protocol connectors.
-     * 
+     *
      * @return The list of available protocol connectors.
      */
     public List<org.restlet.engine.connector.ProtocolHelper> getRegisteredProtocols() {
@@ -762,225 +728,189 @@ public class Engine {
 
     /**
      * Returns the list of available server connectors.
-     * 
+     *
      * @return The list of available server connectors.
      */
-    public List<org.restlet.engine.connector.ConnectorHelper<org.restlet.Server>> getRegisteredServers() {
+    public List<ConnectorHelper<Server>> getRegisteredServers() {
         return this.registeredServers;
     }
 
     /**
-     * Returns the class loader specified by the user and that should be used in
-     * priority.
-     * 
+     * Returns the class loader specified by the user and that should be used in priority.
+     *
      * @return The user class loader
      */
     public ClassLoader getUserClassLoader() {
         return userClassLoader;
     }
 
-    /**
-     * Registers the default authentication helpers.
-     */
+    /** Registers the default authentication helpers. */
     public void registerDefaultAuthentications() {
-        getRegisteredAuthenticators()
-                .add(new org.restlet.engine.security.HttpBasicHelper());
+        getRegisteredAuthenticators().add(new org.restlet.engine.security.HttpBasicHelper());
     }
 
-    /**
-     * Registers the default client and server connectors.
-     */
+    /** Registers the default client and server connectors. */
     public void registerDefaultConnectors() {
-        getRegisteredClients()
-                .add(new org.restlet.engine.local.ClapClientHelper(null));
-        getRegisteredClients()
-                .add(new org.restlet.engine.local.RiapClientHelper(null));
-        getRegisteredServers()
-                .add(new org.restlet.engine.local.RiapServerHelper(null));
-        getRegisteredServers()
-                .add(new org.restlet.engine.connector.HttpServerHelper(null));
-        getRegisteredServers()
-                .add(new org.restlet.engine.connector.HttpsServerHelper(null));
-        getRegisteredClients()
-                .add(new org.restlet.engine.local.FileClientHelper(null));
-        getRegisteredClients()
-                .add(new org.restlet.engine.local.ZipClientHelper(null));
-        getRegisteredClients()
-                .add(new org.restlet.engine.connector.HttpClientHelper(null));
+        getRegisteredClients().add(new org.restlet.engine.local.ClapClientHelper(null));
+        getRegisteredClients().add(new org.restlet.engine.local.RiapClientHelper(null));
+        getRegisteredServers().add(new org.restlet.engine.local.RiapServerHelper(null));
+        getRegisteredServers().add(new org.restlet.engine.connector.HttpServerHelper(null));
+        getRegisteredServers().add(new org.restlet.engine.connector.HttpsServerHelper(null));
+        getRegisteredClients().add(new org.restlet.engine.local.FileClientHelper(null));
+        getRegisteredClients().add(new org.restlet.engine.local.ZipClientHelper(null));
+        getRegisteredClients().add(new org.restlet.engine.connector.HttpClientHelper(null));
     }
 
-    /**
-     * Registers the default converters.
-     */
+    /** Registers the default converters. */
     public void registerDefaultConverters() {
-        getRegisteredConverters()
-                .add(new org.restlet.engine.converter.DefaultConverter());
-        getRegisteredConverters().add(
-                new org.restlet.engine.converter.StatusInfoHtmlConverter());
+        getRegisteredConverters().add(new org.restlet.engine.converter.DefaultConverter());
+        getRegisteredConverters().add(new org.restlet.engine.converter.StatusInfoHtmlConverter());
     }
 
-    /**
-     * Registers the default protocols.
-     */
+    /** Registers the default protocols. */
     public void registerDefaultProtocols() {
-        getRegisteredProtocols()
-                .add(new org.restlet.engine.connector.HttpProtocolHelper());
+        getRegisteredProtocols().add(new org.restlet.engine.connector.HttpProtocolHelper());
     }
 
     /**
      * Registers a helper.
-     * 
-     * @param classLoader      The classloader to use.
-     * @param provider         Bynary name of the helper's class.
-     * @param helpers          The list of helpers to update.
+     *
+     * @param classLoader The classloader to use.
+     * @param provider Bynary name of the helper's class.
+     * @param helpers The list of helpers to update.
      * @param constructorClass The constructor parameter class to look for.
      */
-    @SuppressWarnings({ "unchecked", "rawtypes" })
-    public void registerHelper(ClassLoader classLoader, String provider,
-            List helpers, Class constructorClass) {
+    @SuppressWarnings({"unchecked", "rawtypes"})
+    public void registerHelper(
+            ClassLoader classLoader, String provider, List helpers, Class constructorClass) {
         if ((provider != null) && (!provider.isEmpty())) {
             // Instantiate the factory
             try {
                 Class providerClass = classLoader.loadClass(provider);
 
                 if (constructorClass == null) {
-                    helpers.add(providerClass.getDeclaredConstructor()
-                            .newInstance());
+                    helpers.add(providerClass.getDeclaredConstructor().newInstance());
                 } else {
-                    helpers.add(providerClass.getConstructor(constructorClass)
-                            .newInstance(constructorClass.cast(null)));
+                    helpers.add(
+                            providerClass
+                                    .getConstructor(constructorClass)
+                                    .newInstance(constructorClass.cast(null)));
                 }
-            } catch (Throwable t) {
-                Context.getCurrentLogger().log(Level.INFO,
-                        "Unable to register the helper " + provider, t);
+            } catch (Exception exception) {
+                Context.getCurrentLogger()
+                        .log(
+                                Level.INFO,
+                                exception,
+                                () -> "Unable to register the helper " + provider);
             }
         }
     }
 
     /**
      * Registers a helper.
-     * 
-     * @param classLoader      The classloader to use.
-     * @param configUrl        Configuration URL to parse
-     * @param helpers          The list of helpers to update.
+     *
+     * @param classLoader The classloader to use.
+     * @param configUrl Configuration URL to parse
+     * @param helpers The list of helpers to update.
      * @param constructorClass The constructor parameter class to look for.
      */
-    public void registerHelpers(ClassLoader classLoader, java.net.URL configUrl,
-            List<?> helpers, Class<?> constructorClass) {
-        try {
-            java.io.BufferedReader reader = null;
-            try {
-                reader = new java.io.BufferedReader(
-                        new InputStreamReader(configUrl.openStream(), "utf-8"),
-                        IoUtils.BUFFER_SIZE);
-                String line = reader.readLine();
+    public void registerHelpers(
+            ClassLoader classLoader,
+            java.net.URL configUrl,
+            List<?> helpers,
+            Class<?> constructorClass) {
 
-                while (line != null) {
-                    registerHelper(classLoader, getProviderClassName(line),
-                            helpers, constructorClass);
-                    line = reader.readLine();
-                }
-            } catch (IOException e) {
-                Context.getCurrentLogger().log(Level.SEVERE,
-                        "Unable to read the provider descriptor: "
-                                + configUrl.toString());
-            } finally {
-                if (reader != null) {
-                    reader.close();
-                }
+        try (java.io.BufferedReader reader =
+                new java.io.BufferedReader(
+                        new InputStreamReader(configUrl.openStream(), StandardCharsets.UTF_8),
+                        IoUtils.BUFFER_SIZE)) {
+            String line = reader.readLine();
+
+            while (line != null) {
+                registerHelper(classLoader, getProviderClassName(line), helpers, constructorClass);
+                line = reader.readLine();
             }
-        } catch (IOException ioe) {
-            Context.getCurrentLogger().log(Level.SEVERE,
-                    "Exception while detecting the helpers.", ioe);
+        } catch (IOException e) {
+            Context.getCurrentLogger()
+                    .log(Level.SEVERE, "Unable to read the provider descriptor: {0}", configUrl);
         }
     }
 
     /**
      * Registers a list of helpers.
-     * 
-     * @param descriptorPath   Classpath to the descriptor file.
-     * @param helpers          The list of helpers to update.
+     *
+     * @param descriptorPath Classpath to the descriptor file.
+     * @param helpers The list of helpers to update.
      * @param constructorClass The constructor parameter class to look for.
      * @throws IOException
      */
-    public void registerHelpers(String descriptorPath, List<?> helpers,
-            Class<?> constructorClass) throws IOException {
-        ClassLoader classLoader = getClassLoader();
-        Enumeration<java.net.URL> configUrls = classLoader
-                .getResources(descriptorPath);
+    public void registerHelpers(String descriptorPath, List<?> helpers, Class<?> constructorClass)
+            throws IOException {
+        ClassLoader currentClassLoader = getClassLoader();
+        Enumeration<java.net.URL> configUrls = currentClassLoader.getResources(descriptorPath);
 
         if (configUrls != null) {
             while (configUrls.hasMoreElements()) {
-                registerHelpers(classLoader, configUrls.nextElement(), helpers,
-                        constructorClass);
+                registerHelpers(
+                        currentClassLoader, configUrls.nextElement(), helpers, constructorClass);
             }
         }
     }
 
     /**
-     * Registers a factory used by the URL class to create the
-     * {@link java.net.URLConnection} instances when the
-     * {@link java.net.URL#openConnection()} or
-     * {@link java.net.URL#openStream()} methods are invoked.
-     * <p>
-     * The implementation is based on the client dispatcher of the current
-     * context, as provided by {@link Context#getCurrent()} method.
+     * Registers a factory used by the URL class to create the {@link java.net.URLConnection}
+     * instances when the {@link java.net.URL#openConnection()} or {@link java.net.URL#openStream()}
+     * methods are invoked.
+     *
+     * <p>The implementation is based on the client dispatcher of the current context, as provided
+     * by {@link Context#getCurrent()} method.
      */
     public void registerUrlFactory() {
-        // Set up an java.net.URLStreamHandlerFactory for
-        // proper creation of java.net.URL instances
-        java.net.URL.setURLStreamHandlerFactory(
-                new java.net.URLStreamHandlerFactory() {
-                    public java.net.URLStreamHandler createURLStreamHandler(
-                            String protocol) {
-                        return new java.net.URLStreamHandler() {
+        // Set up an java.net.URLStreamHandlerFactory for proper creation of java.net.URL instances
+        setURLStreamHandlerFactory(
+                protocol ->
+                        new java.net.URLStreamHandler() {
 
                             @Override
-                            protected java.net.URLConnection openConnection(
-                                    java.net.URL url) throws IOException {
+                            protected java.net.URLConnection openConnection(java.net.URL url)
+                                    throws IOException {
                                 return new java.net.URLConnection(url) {
 
                                     @Override
-                                    public void connect() throws IOException {
+                                    public void connect() {
+                                        // no connection to open
                                     }
 
                                     @Override
-                                    public InputStream getInputStream()
-                                            throws IOException {
-                                        InputStream result1 = null;
+                                    public InputStream getInputStream() throws IOException {
+                                        InputStream result = null;
 
                                         // Retrieve the current context
-                                        final Context context = Context
-                                                .getCurrent();
+                                        final Context context = Context.getCurrent();
 
                                         if (context != null) {
-                                            Response response = context
-                                                    .getClientDispatcher()
-                                                    .handle(new Request(
-                                                            Method.GET,
-                                                            this.url.toString()));
+                                            Response response =
+                                                    context.getClientDispatcher()
+                                                            .handle(
+                                                                    new Request(
+                                                                            Method.GET,
+                                                                            this.url.toString()));
 
-                                            if (response.getStatus()
-                                                    .isSuccess()) {
-                                                result1 = response.getEntity()
-                                                        .getStream();
+                                            if (response.getStatus().isSuccess()) {
+                                                result = response.getEntity().getStream();
                                             }
                                         }
 
-                                        return result1;
+                                        return result;
                                     }
                                 };
                             }
-
-                        };
-                    }
-
-                });
+                        });
     }
 
     /**
      * Sets the engine class loader.
-     * 
+     *
      * @param newClassLoader The new user class loader to use.
      */
     public void setClassLoader(ClassLoader newClassLoader) {
@@ -989,7 +919,7 @@ public class Engine {
 
     /**
      * Sets the logger facade to use.
-     * 
+     *
      * @param loggerFacade The logger facade to use.
      */
     public void setLoggerFacade(LoggerFacade loggerFacade) {
@@ -998,9 +928,8 @@ public class Engine {
 
     /**
      * Sets the list of available authentication helpers.
-     * 
-     * @param registeredAuthenticators The list of available authentication
-     *                                 helpers.
+     *
+     * @param registeredAuthenticators The list of available authentication helpers.
      */
     public void setRegisteredAuthenticators(
             List<org.restlet.engine.security.AuthenticatorHelper> registeredAuthenticators) {
@@ -1009,8 +938,7 @@ public class Engine {
                 this.registeredAuthenticators.clear();
 
                 if (registeredAuthenticators != null) {
-                    this.registeredAuthenticators
-                            .addAll(registeredAuthenticators);
+                    this.registeredAuthenticators.addAll(registeredAuthenticators);
                 }
             }
         }
@@ -1018,7 +946,7 @@ public class Engine {
 
     /**
      * Sets the list of available client helpers.
-     * 
+     *
      * @param registeredClients The list of available client helpers.
      */
     public void setRegisteredClients(
@@ -1036,7 +964,7 @@ public class Engine {
 
     /**
      * Sets the list of available converter helpers.
-     * 
+     *
      * @param registeredConverters The list of available converter helpers.
      */
     public void setRegisteredConverters(
@@ -1054,7 +982,7 @@ public class Engine {
 
     /**
      * Sets the list of available protocol helpers.
-     * 
+     *
      * @param registeredProtocols The list of available protocol helpers.
      */
     public void setRegisteredProtocols(
@@ -1072,11 +1000,10 @@ public class Engine {
 
     /**
      * Sets the list of available server helpers.
-     * 
+     *
      * @param registeredServers The list of available server helpers.
      */
-    public void setRegisteredServers(
-            List<org.restlet.engine.connector.ConnectorHelper<org.restlet.Server>> registeredServers) {
+    public void setRegisteredServers(List<ConnectorHelper<Server>> registeredServers) {
         synchronized (this.registeredServers) {
             if (registeredServers != this.registeredServers) {
                 this.registeredServers.clear();
@@ -1090,11 +1017,10 @@ public class Engine {
 
     /**
      * Sets the user class loader that should be used in priority.
-     * 
+     *
      * @param newClassLoader The new user class loader to use.
      */
     public void setUserClassLoader(ClassLoader newClassLoader) {
         this.userClassLoader = newClassLoader;
     }
-
 }
